@@ -19,6 +19,19 @@ Experienced fencers, who often look the part of nobility if not always actually 
 Special Notes:"+{SPECIAL_NOTES_SKIRMISHER}
 	get_hit_sound={SOUND_LIST:HUMAN_HIT}
 	die_sound={SOUND_LIST:HUMAN_DIE}
+	[standing_anim]
+		[frame]
+			begin=-100
+			end=0
+			image="units/human-loyalists/duelist.png"
+		[/frame]
+		[frame]
+			begin=0
+			end=100
+			image="units/human-loyalists/duelist-stand2.png"
+		[/frame]
+		
+	[/standing_anim]
 	[defend]
 		[frame]
 			begin=-150
