@@ -42,6 +42,7 @@ SVN trunk (1.1.2+svn):
    * hitpoint distribution graphs under Damage Calculations
    * improvements to loadscreen progressbar
    * new selection stlye for menu listboxes
+   * units now have standing animations that are used when standing
  * multiplayer maps:
    * added multiplayer maps: 8p Morituri
    * revised multiplayer maps: Blitz, Charge, Cynsaun Battlefield, Den of Onis,
